feat: add eino examples (#1)
* feat: add eino examples

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,7 +1,3 @@
-# Options for analysis running.
-run:
-  # include `vendor` `third_party` `testdata` `examples` `Godeps` `builtin`
-  skip-dirs-use-default: true
 # output configuration options
 output:
   # Format: colored-line-number|line-number|json|tab|checkstyle|code-climate|junit-xml|github-actions
@@ -20,16 +16,18 @@ linters-settings:
       - stdmethods
 linters:
   enable:
-    - gofumpt
     - goimports
     - gofmt
   disable:
     - errcheck
     - typecheck
-    - deadcode
-    - varcheck
     - staticcheck
+    - unused
+    - gosimple
+    - ineffassign
+    - gofumpt
 issues:
+  # include `vendor` `third_party` `testdata` `examples` `Godeps` `builtin`
   exclude-use-default: true
   exclude-files:
     - ".*\\.mock\\.go$"
