--- a/quickstart/eino_assistant/.env
+++ b/quickstart/eino_assistant/.env
@@ -1,11 +1,11 @@
 # ark model: https://console.volcengine.com/ark
 # 必填，
 # 火山云方舟 ChatModel 的 Endpoint ID
-export ARK_CHAT_MODEL=""
+export ARK_CHAT_MODEL="ep-20250210182908-qzn89"
 # 火山云方舟 向量化模型的 Endpoint ID
-export ARK_EMBEDDING_MODEL=""
+export ARK_EMBEDDING_MODEL="doubao-embedding-text-240715"
 # 火山云方舟的 API Key
-export ARK_API_KEY=""
+export ARK_API_KEY="3bff6b7f-0bb8-4b10-9211-000f25f6f1e4"
 
 # langfuse: https://cloud.langfuse.com/
 # 下面两个环境变量如果为空，则不开启 langfuse callback
