--- a/quickstart/eino_assistant/.env
+++ b/quickstart/eino_assistant/.env
@@ -4,15 +4,16 @@
 export ARK_CHAT_MODEL="ep-20250210182908-qzn89"
 # 火山云方舟 向量化模型的 Endpoint ID
 export ARK_EMBEDDING_MODEL="doubao-embedding-text-240715"
+#export ARK_EMBEDDING_MODEL="doubao-embedding-large-text-240915"
 # 火山云方舟的 API Key
 export ARK_API_KEY="3bff6b7f-0bb8-4b10-9211-000f25f6f1e4"
 
 # langfuse: https://cloud.langfuse.com/
 # 下面两个环境变量如果为空，则不开启 langfuse callback
 # Langfuse Project 的 Public Key
-export LANGFUSE_PUBLIC_KEY=""
+export LANGFUSE_PUBLIC_KEY="pk-lf-0e092583-1bdb-40c9-a5c3-c28b14b91144"
 # Langfuse Project 的 Secret Key。 注意，Secret Key 仅可在被创建时查看一次
-export LANGFUSE_SECRET_KEY=""
+export LANGFUSE_SECRET_KEY="sk-lf-c91c2f07-2d4d-46e2-9318-da0a9161d4bc"
 
 # Redis Server 的地址，不填写时，默认是 localhost:6379
 export REDIS_ADDR=
